--- a/영화 추천 방식.md
+++ b/영화 추천 방식.md
@@ -15,10 +15,114 @@
 
 #### 2. admin 계정만 영화 추가를 할 수 있음
 
-- 영화 추가할 때 `genre_ids`를 한 개만 선택할 수 있음 => 여러개 선택이 안됨.
+- `request.user.is_superuser` 
 
-- `like_users`를 삭제해야함
+  > superuser 만 영화추가할 수 있음
+
+- ~~영화 추가할 때 `genre_ids`를 한 개만 선택할 수 있음 => 여러개 선택이 안됨.~~
+
+  >```python
+  >if form.is_valid():
+  >    # movie = form.save(commit=fasle)
+  >    movie = form.save()
+  >    
+  >    movie.user ___ movie 모델에 user가 없는데 ~~
+  >    # movie.user = requser.user
+  >    # movie.save()
+  >```
+  >
+  >
+
+- ~~`like_users`를 삭제해야함~~
+
+  > forms.py 에 MovieForm의 fields 영역 변경
+
 - `original_language` 에 숫자만 넣어도 입력이 됨
+
+- genre 선택
+
+  - checkbox로 선택할 수 있게끔
+
+    > ```python
+    > # forms.py 
+    > # ModelMultipleChoiceField 활용
+    > 
+    > class MovieForm(forms.ModelForm):
+    >     genre_ids = forms.ModelMultipleChoiceField(
+    >         label = 'Genre',
+    >         queryset = Genre.objects.all(),
+    >         widget = forms.CheckboxSelectMultiple,
+    >     )
+    > ```
+    >
+    > 
+
+
+
+#### 3. 영화추천
+
+- ~~genre가 뜨지 않음~~
+
+
+
+#### 4. 영화 수정, 삭제
+
+- 수정할 수 없음
+
+
+
+#### 5. comment다는 링크가 사라짐??  ( 리뷰작성 후 댓글을 달 수 없음)
+
+- ~~`Title`을 누르면 comment작성 하게 끔 되어야 하는데 추천영화로 리다이렉트됨~~
+
+  > review_detail.html에 다른 것이 들어 가 있었음
+
+- 댓글 작성자를 누르면 해당하는 유저의 profile로 링크
+
+
+
+#### 6. 댓글 수정
+
+- ~~수정 버튼 누르면 NoReverseMatch 뜸~~
+
+  > views.py > def update)()
+  >
+  > return redirect('movies:review_detail', movie_pk, review.pk)
+
+- 댓글의 생성 및 수정 시각 정보 포함
+
+
+
+#### 8. 권리자 권한의 유저만 유저 관리 권한을 가진다.
+
+
+
+#### 7. 복수의 기능 게시판 구성
+
+- 자유게시판 만들기~
+- 권한을 나누어 유저 관리 ( 예 , 관리자, 스테프 등)
+
+
+
+
+
+
+
+## 추가로 해야할 기능
+
+#### 1. 사진 누르면 trailer영상 띄우기
+
+- `index`, `detail`에서 둘다 가능하게 끔
+
+
+
+
+
+
+
+
+
+
 
 
 
